# v0-explainable-gnn-studio

./: .env.example  README.md  package.json  pnpm-lock.yaml  pyproject.toml
app/: globals.css  layout.tsx  page.tsx
backend/: .env.example  Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/db/: database.py  models.py  schemas.py
backend/routes/: balance.py  datasets.py  explain.py  train.py
backend/services/: dataset_cache.py  dataset_split.py  explain_service.py  graph_stats.py  imbalance_methods.py  metrics.py  mock_service.py  pyg_loader.py  redis_cache.py  svwng.py  training_service.py
backend/workers/: celery_worker.py
components/: balancing-before-after-chart.tsx  balancing-distribution-tab.tsx  class-performance-spread.tsx  comparison-bar-chart.tsx  confusion-matrix-heatmap.tsx  dataset-overview-card.tsx  dataset-upload-panel.tsx  explainability-comparison-chart.tsx  explainability-tab.tsx  explainer-results-table.tsx  feature-importance-chart.tsx  global-explainability-panel.tsx  imbalance-info-card.tsx  imbalance-performance-chart.tsx  majority-minority-comparison.tsx  method-radar-chart.tsx  metric-cards.tsx  per-class-bar-chart.tsx  per-class-metrics-table.tsx  real-results-table.tsx  results-table.tsx  subgraph-viewer.tsx  tooltip-label.tsx  training-curves-panel.tsx  training-tab.tsx  worst-class-spotlight.tsx
lib/: api.ts  balancing-methods.ts  metrics-glossary.ts  results-utils.ts  store.ts  types.ts
scripts/: 001_create_tables.sql  002_add_graph_before_after.sql  extract_dataset_stats.py  load_pyg_datasets.py
(+36 files in other folders)
